fix menu tukang